# Anki-ai-agent

./: .gitignore  README.md  pyproject.toml
MagicMock/DISAMBIGUATION_FILE/: 4444583792  4446912000  4454122560  4472059760  4475728432  4475860848  4476024688  4477100320  4478334832  4482086768  4482316144  4485444144  4510152560  4515783616  4516724816  4516835888  4517933616
MagicMock/WORD_NETWORK_FILE/: 4516828832  4520713856
proposals/: ai-integration-proposal.md  architecture-technical-plan.md  cognate-etymology-proposal.md  language-learning-pedagogy-proposal.md  ui-ux-design-proposal.md  vocabulary-network-proposal.md
src/ankicli/: __init__.py  __main__.py  assistant.py  cefr.py  chat.py  chat_log.py  cli.py  client.py  cognates.py  config.py  conversation_store.py  delegate.py  error_journal.py  grammar_quiz.py  grammar_scores.py  learning_summary.py  models.py  paths.py  progress_tracking.py  session_error_tracker.py  tool_handlers.py  tools.py  translation_practice.py  word_network.py
tests/: __init__.py  test_ai_integration.py  test_assistant.py  test_cefr.py  test_cefr_data.py  test_chat_log.py  test_chat_ui.py  test_cli.py  test_cognates.py  test_config.py  test_conversation_store.py  test_delegate.py  test_difficulty_scoring.py  test_error_journal.py  test_grammar_quiz.py  test_learning_summary.py  test_models.py  test_paths.py  test_practice_enhancements.py  test_progress_tracking.py  test_tool_handlers.py  test_tools.py  test_translation_practice.py  test_typed_learning_summary.py  test_ui_enhancements.py  test_word_network.py
(+14 files in other folders)
