[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ankicli"
version = "0.1.0"
description = "AI-powered CLI tool to manage Anki flashcards"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "anthropic>=0.40.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
ankicli = "ankicli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ankicli"]

[tool.hatch.build.targets.sdist]
include = ["src/ankicli"]

[tool.pytest.ini_options]
pythonpath = ["src"]
